Functionality with the sensor and right text to speech

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,29 +17,29 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button1"
+        android:layout_above="@+id/ArSel"
         android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_toStartOf="@+id/button1" />
+        android:layout_toStartOf="@+id/ArSel" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/ArSel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="@+string/button" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/OKBut"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
+        android:layout_alignBaseline="@+id/ArSel"
+        android:layout_alignBottom="@+id/ArSel"
         android:layout_alignRight="@+id/map"
         android:layout_marginRight="27dp"
         android:text="@string/ButOk" />
